k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ti-2306240080
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ti-2306240080
  template:
    metadata:
      labels:
        app: ti-2306240080
    spec:
      containers:
        - name: springboot-container
          image: harmanhakim/ti-2306240080:REPLACE_ME_TAG
          ports:
            - containerPort: 8080
