k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ti-2306240080-service
  namespace: default
spec:
  selector:
    app: ti-2306240080
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
