k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ti-2306240080-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: 2306240080-be.hafizmuh.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ti-2306240080-service
                port:
                  number: 80
